# fuck-drcom

./: .gitignore  CHANGELOG.md  README.md  config.yaml.example  drcom-auth.service  drcom_auth.py  get_wifi_params.py  install.sh  pyproject.toml  requirements.txt  start_client.py  start_client_gui.py  start_server.py  test_login_fix.py  test_socks5_proxy.py  免责声明.md  快速使用指南.txt  项目说明.md  项目转型说明.md  验证逻辑分析.md
client/: __init__.py  vpn_client.py
client_gui/: __init__.py  vpn_client_gui.py
common/: __init__.py  config.py  config_manager.py  drcom_login.py  logger.py  socks5_proxy.py
docs/: OpenWrt部署指南.md  使用示例.md  修复说明.md  开发说明.md  快速开始.md  项目结构变更说明.md  验证逻辑分析.md
server/: __init__.py  vpn_server.py
